[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpromptly"
version = "0.1.0"
description = "LaunchPromptly Python SDK — manage, version, and deploy AI prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["launchpromptly", "prompt-management", "llm", "ai", "openai", "anthropic", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://launchpromptly.dev"
Repository = "https://github.com/rahuliiitm/python-sdk"

[tool.setuptools.packages.find]
include = ["launchpromptly*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
