[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpromptly"
version = "0.2.0"
description = "LaunchPromptly Python SDK — LLM privacy & security toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["launchpromptly", "llm", "security", "pii", "redaction", "prompt-injection", "ai", "openai", "anthropic", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]

[project.optional-dependencies]
ml = [
    "presidio-analyzer>=2.2.0",
    "spacy>=3.5.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://launchpromptly.dev"
Repository = "https://github.com/rahuliiitm/python-sdk"

[tool.setuptools.packages.find]
include = ["launchpromptly*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
